# adk-examples

./: .env.base  README.md
agents/academic-research/: pyproject.toml
agents/academic-research/eval/: EVALUATION.md
agents/academic-research/evaluation_results/: 2025-07-24_evaluation_results.md
agents/brand-search-optimization/: README.md  pyproject.toml
agents/brand-search-optimization/deployment/: run.sh
agents/brand-search-optimization/eval/: EVALUATION.md
agents/brand-search-optimization/evaluation_results/: 2025-07-24_evaluation_results.md
agents/customer-service/: .gitignore  README.md  TEST_EXPECTATIONS.md  pyproject.toml
agents/customer-service/eval/: EVALUATION.md
agents/customer-service/eval/evaluation_results/: 2025-07-24_evaluation_results.md  2025-07-24_test-results.md  previous_evaluation_results.md
agents/customer-service/evaluation_results/: 2025-07-24_evaluation_results_new.md
agents/data-science/: SETUP_GUIDE.md  pyproject.toml
agents/data-science/eval/: EVALUATION.md
agents/data-science/eval/evaluation_results/: 2025-07-24_evaluation_results.md
agents/financial-advisor/: .gitignore  EVALUATION_RESULTS.md  README.md  pyproject.toml  pytest.ini
agents/financial-advisor/eval/: EVALUATION.md  comprehensive_eval.py  flexible_evaluation_results.json  flexible_semantic_eval.py  llm_evaluation_results.json  run_semantic_eval.py  semantic_eval.py  semantic_evaluation_results.json  test_eval.py  test_semantic_eval.py
agents/financial-advisor/eval/data/: financial-advisor-semantic.test.json
agents/financial-advisor/eval/evaluation_results/: 2025-07-24_evaluation-results.md  2025-07-24_evaluation_results.md  previous_evaluation_results.md
agents/financial-advisor/evaluation_results/: 2025-07-24_evaluation_results_new.md
agents/financial-advisor/financial_advisor/: prompt.py  prompt_with_config.py  prompt_with_config_optimized.py
agents/financial-advisor/financial_advisor/sub_agents/data_analyst/: prompt.py
agents/financial-advisor/financial_advisor/sub_agents/execution_analyst/: prompt.py
agents/financial-advisor/financial_advisor/sub_agents/risk_analyst/: prompt.py
agents/image-scoring/: README.md  pyproject.toml
agents/image-scoring/eval/: EVALUATION.md
agents/image-scoring/evaluation_results/: 2025-07-24_evaluation_results_new.md
agents/llm-auditor/: .gitignore  README.md  pyproject.toml
agents/llm-auditor/eval/: EVALUATION.md  test_eval.py
agents/llm-auditor/eval/evaluation_results/: 2025-07-24_evaluation_results.md  2025-07-24_test-execution-results.md  previous_evaluation_results.md
agents/llm-auditor/evaluation_results/: 2025-07-24_evaluation_results_new.md
agents/marketing-agency/: README.md  pyproject.toml
agents/marketing-agency/eval/: EVALUATION.md
agents/marketing-agency/eval/evaluation_results/: 2025-07-24_test-results.md
agents/marketing-agency/evaluation_results/: 2025-07-24_uv_migration_evaluation_results.md
agents/personalized-shopping/: .gitignore  pyproject.toml
agents/personalized-shopping/eval/: EVALUATION.md
agents/personalized-shopping/personalized_shopping/shared_libraries/: init_env.py
agents/personalized-shopping/personalized_shopping/shared_libraries/search_engine/: convert_product_file_format.py
agents/rag/: README.md  SETUP_AND_EVALUATION.md  pyproject.toml
agents/rag/eval/: EVALUATION.md
agents/rag/eval/evaluation_results/: 2025-07-24_evaluation_results.md  previous_evaluation_results.md
agents/travel-concierge/: .env  .env.example  pyproject.toml
agents/travel-concierge/eval/: EVALUATION.md
agents/travel-concierge/eval/evaluation_results/: 2025-07-24_evaluation-results.md
docs/: GOOGLE_CLOUD_SETUP.md  ISSUES.md  MASTER_EVALUATION_SUMMARY.md
