[project]
name = "academic_research"
version = "0.1"
description = "AI-driven agent designed to facilitate the exploration of the academic landscape"
authors = [{ name = "Antonio Gulli", email = "gulli@google.com" }]
license = { text = "Apache License 2.0" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-adk>=1.0.0",
    "google-genai>=1.9.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "google-cloud-aiplatform[adk,agent-engines]>=1.93",
]

[project.optional-dependencies]
dev = [
    "google-adk[eval]>=1.0.0",
    "google-cloud-aiplatform[adk,agent-engines,evaluation]>=1.93",
    "pytest>=8.3.5",
    "black>=25.1.0",
    "pytest-asyncio>=0.26.0",
    "pandas>=2.2.3",
    "tabulate>=0.9.0",
]
deployment = [
    "absl-py>=2.2.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
