[project]
name = "brand-search-optimization"
version = "0.1.0"
description = "Brand Search Optimization ADK Agent Designed to enhance product titles for retail brand search. It retrieves top keywords, performs searches, and analyzes top results to provide suggestions for enriching product titles"
authors = [
    { name = "Nikhil Kulkarni", email = "nikhilkul@google.com" }
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.8.1",
    "tabulate>=0.9.0",
    "cloudpickle>=3.1.1",
    "pylint>=3.3.6",
    "google-cloud-aiplatform[adk,agent-engines]>=1.93.0",
    "google-adk>=1.0.0",
    "jsonschema>=4.23.0",
    "rouge-score>=0.1.2",
    "google-genai>=1.5.0",
    "selenium>=4.30.0",
    "webdriver-manager>=4.0.2",
    "google-cloud-bigquery>=3.31.0",
    "absl-py>=2.2.2",
    "pillow>=11.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "scikit-learn>=1.6.1",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.3",
    "flake8-pyproject>=1.2.3",
    "pylint>=3.3.6",
    "pyink>=24.10.1",
    "jsonschema>=4.23.0",
    "google-cloud-aiplatform[evaluation]>=1.93.0",
]

[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["brand_search_optimization"]

[tool.pytest.ini_options]
console_output_style = "progress"
addopts = "-vv -s"
testpaths = ["tests/", "eval/"]
markers = ["unit"]
log_level = "ERROR"
log_cli = false
log_auto_indent = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "[%(asctime)s] %(levelname)s (%(funcName)s) \t [%(pathname)s:%(lineno)d] %(message)s"
filterwarnings = ["ignore::UserWarning"]

[tool.pyink]
line-length = 80
pyink-indentation = 4
pyink-use-majority-quotes = true

[dependency-groups]
dev = [
    "google-adk[eval]>=1.8.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
